# aoc

2021/: .gitignore  advent2021.cabal  shell.nix
2021/.direnv/: cache-.git.6fe16ed1bc2M  drv
2021/app/: '  .#Day03.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Musings.hs  Util.hs
2022/: .gitignore
2022/src/: 01.rkt  02.rkt  03.rkt  04.rkt  05.rkt  06.rkt  07.rkt  08.rkt  09.rkt  10.rkt  11.rkt  12.rkt  13.rkt  14.rkt  15.rkt  16.rkt  17.rkt  18.rkt  19.rkt
2022/src/util/: chunk.rkt  grid.rkt  heap.rkt
2023/: .envrc  .gitignore  shell.nix
2023/native/: Cargo.toml
2023/native/src/: .lib.rs.swp  lib.rs
2023/src/: 01.pl  02.pl  03.pl  04.pl  05.pl  06.pl  07.pl  08.pl  09.pl  10.pl
