cabal-version:      2.4
name:               advent2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Joseph Griego
maintainer:         joseph.j.griego@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    array >= 0.5.4.0
                    , base ^>=4.14.1.0
                    , bytestring
                    , containers
                    , data-fix >= 0.3.2
                    , hoauth2
                    , http-client
                    , lens >= 5.1
                    , logict
                    , megaparsec >= 9.2.0
                    , mtl
                    , parsec
                    , text
                    , transformers
                    , transformers-base
                    , uri-bytestring >= 0.3.3.1
                    , repa
                    , fgl
                    , heap
                    , terminal-progress-bar
                    , deepseq
    hs-source-dirs:   app
    default-language: Haskell2010
